--- a/api-gateway/src/main/resources/application-region2.yml
+++ b/api-gateway/src/main/resources/application-region2.yml
@@ -22,7 +22,7 @@ spring:
           filters:
             - StripPrefix=1
         - id: dummy
-          uri: lb://DUMMY-REGION2
+          uri: lb://DUMMY
           predicates:
             - Path=/dummy/**
           filters:
