--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: config-server-${eureka.client.region}
+    name: config-server
   cloud:
     loadbalancer:
       ribbon:
