--- a/dummy-service/src/main/resources/bootstrap-region1.yml
+++ b/dummy-service/src/main/resources/bootstrap-region1.yml
@@ -3,14 +3,14 @@ spring:
     config:
       discovery:
         enabled: true
-        service-id: config-server-${eureka.client.region}
+        service-id: config-server
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: peer1
     metadata-map:
-      zone: zone1-isolated
+      zone: zone1
   client:
     region: region1
     service-url:
-      defaultZone: ${EUREKA_SERVER:http://localhost:8761/eureka}
+      defaultZone: ${EUREKA_SERVER:http://peer1:8761/eureka}
